; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_crashes.c_test_refs_crashes__double_free.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_crashes.c_test_refs_crashes__double_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"refs/heads/xxx\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_crashes__double_free() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  %5 = call i32* @cl_git_sandbox_init(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  store i32* %5, i32** %1, align 8
  %6 = load i32*, i32** %1, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @git_reference_symbolic_create(i32** %2, i32* %6, i8* %7, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i32 0, i32* null)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @git_reference_lookup(i32** %3, i32* %10, i8* %11)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @git_reference_delete(i32* %14)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @git_reference_free(i32* %17)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @git_reference_free(i32* %19)
  %21 = load i32*, i32** %1, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @git_reference_lookup(i32** %3, i32* %21, i8* %22)
  %24 = call i32 @cl_git_fail(i32 %23)
  %25 = call i32 (...) @cl_git_sandbox_cleanup()
  ret void
}

declare dso_local i32* @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_symbolic_create(i32**, i32*, i8*, i8*, i32, i32*) #1

declare dso_local i32 @git_reference_lookup(i32**, i32*, i8*) #1

declare dso_local i32 @git_reference_delete(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @cl_git_sandbox_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
